--- a/pakistan.html
+++ b/pakistan.html
@@ -2,7 +2,6 @@
 <html>
     <body>
         <title>
-            hello how are you 
-        </title>
+            hello how are you ,ok
     </body>
 </html>
